# chronos

./: dune-project  klines_json_to_csv.sh  year_data.sh
core/: dune  order.ml  order.mli  position.ml  strategy.ml  trade.ml
lib/: backtesting_engine.ml  backtesting_engine_functor.ml  backtesting_engine_vwap.ml  dune  ma_crossover_strategy.ml  order.ml  order.mli  position.ml  strategy.ml  strategy_sig.mli  vwap_strategy.ml
test/: dune
