(library
 (name chronos)
 (libraries chronos_core yojson uri
  lwt.unix 
  cohttp
  cohttp-lwt-unix
  conduit-lwt-unix
  conduit-lwt
  sexplib
  uuidm
  ptime
  ptime.clock.os
  ppx_deriving_yojson.runtime)
 (modules backtesting_engine_functor ma_crossover_strategy vwap_strategy backtesting_engine backtesting_engine_vwap strategy_sig)
 (modules_without_implementation strategy_sig)
 (preprocess (pps lwt_ppx ppx_deriving_yojson)))
